packages/web-qwik/src/components/blog/blog-article.module.scss
@keyframes fade-in {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.blog-article {
  animation: 800ms ease 0ms 1 normal both running fade-in;
}

.tag-container {
  margin-bottom: 1rem;
  display: flex;
  gap: 0.5rem;
  user-select: none;
}

.tag {
  box-sizing: border-box;
  padding: 0.5rem;
  border-radius: 0.25rem;
  transition: background-color 200ms;
  cursor: pointer;

  &:hover {
    background-color: rgba(#59a7b5, 0.1);
  }
}

